--- a/public/index.html
+++ b/public/index.html
@@ -189,7 +189,7 @@ header nav .site-logo img {
         <!-- ngIf: siteConfig.promocao.cta.bannerAtivo --><div class="mb-12 mx-auto ng-scope" ng-if="siteConfig.promocao.cta.bannerAtivo">
           <!-- Banner fixo com o mesmo layout dos slides -->
           <div class="banner-fixed">
-            <a ng-href="/raspadinha/achou-ganhou" class="banner-link" href="file:///C:/Users/Vini/Documents/Freelancer/Raspou%20Levou/index.html">
+            <a ng-href="/raspadinha/achou-ganhou.html" class="banner-link" href="file:///C:/Users/Vini/Documents/Freelancer/Raspou%20Levou/index.html">
               <img ng-src="https://files.raspaganha.net/18ef377f-a47b-46ae-8a83-c3ffe384a51b.png" class="banner-image-fixed" src="https://files.raspaganha.net/18ef377f-a47b-46ae-8a83-c3ffe384a51b.png">
             </a>
           </div>
@@ -327,7 +327,7 @@ header nav .site-logo img {
   </a>
   
   <!-- Botão Raspadinhas -->
-  <a ng-href="/raspadinha" class="flex flex-col items-center text-gray-400 hover:text-primary-500 transition" scroll-to-top="" href="/raspadinha">
+  <a ng-href="/raspadinha.html" class="flex flex-col items-center text-gray-400 hover:text-primary-500 transition" scroll-to-top="" href="/raspadinha.html">
     <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
       <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M7 21a4 4 0 01-4-4V5a2 2 0 012-2h4a2 2 0 012 2v12a4 4 0 01-4 4zm0 0h12a2 2 0 002-2v-4a2 2 0 00-2-2h-2.343M11 7.343l1.657-1.657a2 2 0 012.828 0l2.829 2.829a2 2 0 010 2.828l-8.486 8.485M7 17h.01"></path>
     </svg>
@@ -343,7 +343,7 @@ header nav .site-logo img {
   <!-- Botão Carteira para usuários autenticados -->
   <!-- ngIf: isAuthenticated() -->
   
-  <!-- ngIf: !isAuthenticated() --><a ng-if="!isAuthenticated()" ng-href="/auth/login" class="flex flex-col items-center text-gray-400 hover:text-primary-500 transition ng-scope" scroll-to-top="" href="/auth/login">
+  <!-- ngIf: !isAuthenticated() --><a ng-if="!isAuthenticated()" ng-href="/auth/login.html" class="flex flex-col items-center text-gray-400 hover:text-primary-500 transition ng-scope" scroll-to-top="" href="/auth/login">
     <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
       <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M11 16l-4-4m0 0l4-4m-4 4h14m-5 4v1a3 3 0 01-3 3H6a3 3 0 01-3-3V7a3 3 0 013-3h7a3 3 0 013 3v1"></path>
     </svg>
@@ -354,7 +354,7 @@ header nav .site-logo img {
   <!-- ngIf: isAuthenticated() -->
   
   <!-- Botão Registro (se não autenticado) -->
-  <!-- ngIf: !isAuthenticated() --><a ng-if="!isAuthenticated()" ng-href="/register" class="flex flex-col items-center text-gray-400 hover:text-primary-500 transition ng-scope" scroll-to-top="" href="/register.html">
+  <!-- ngIf: !isAuthenticated() --><a ng-if="!isAuthenticated()" ng-href="/register.hmtl" class="flex flex-col items-center text-gray-400 hover:text-primary-500 transition ng-scope" scroll-to-top="" href="/register.html">
     <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
       <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M18 9v3m0 0v3m0-3h3m-3 0h-3m-2-5a4 4 0 11-8 0 4 4 0 018 0zM3 20a6 6 0 0112 0v1H3v-1z"></path>
     </svg>
