--- a/public/register.html
+++ b/public/register.html
@@ -209,7 +209,7 @@ header nav .site-logo img {
     resultado.textContent = "Enviando...";
 
     try {
-      const res = await fetch('/register', {
+      const res = await fetch('/cadastro', {
         method: 'POST',
         headers: { 'Content-Type': 'application/json' },
         body: JSON.stringify(data),
