--- a/public/raspadinha.html
+++ b/public/raspadinha.html
@@ -322,8 +322,8 @@ window.location.href = "file:///C:/Users/Vini/Documents/Freelancer/Raspou%20Levo
         <h3 class="text-white font-medium mb-4">Links Rápidos</h3>
         <ul class="space-y-2">
           <li><a href="/" class="text-gray-400 hover:text-white transition">Início</a></li>
-          <li><a href="/raspadinha" class="text-gray-400 hover:text-white transition">Raspadinhas</a></li>
-          <li><a href="/numeros-da-sorte" class="text-gray-400 hover:text-white transition">Números da Sorte</a></li>
+          <li><a href="/raspadinha.html" class="text-gray-400 hover:text-white transition">Raspadinhas</a></li>
+          <li><a href="/numeros-da-sorte.html" class="text-gray-400 hover:text-white transition">Números da Sorte</a></li>
           <!-- <li><a href="/perguntas-frequentes" class="text-gray-400 hover:text-white transition">Perguntas Frequentes</a></li> -->
         </ul>
       </div>
@@ -378,7 +378,7 @@ window.location.href = "file:///C:/Users/Vini/Documents/Freelancer/Raspou%20Levo
   </a>
   
   <!-- Botão Raspadinhas -->
-  <a ng-href="/raspadinha" class="flex flex-col items-center text-gray-400 hover:text-primary-500 transition" scroll-to-top="" href="/raspadinha">
+  <a ng-href="/raspadinha.html" class="flex flex-col items-center text-gray-400 hover:text-primary-500 transition" scroll-to-top="" href="/raspadinha">
     <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
       <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M7 21a4 4 0 01-4-4V5a2 2 0 012-2h4a2 2 0 012 2v12a4 4 0 01-4 4zm0 0h12a2 2 0 002-2v-4a2 2 0 00-2-2h-2.343M11 7.343l1.657-1.657a2 2 0 012.828 0l2.829 2.829a2 2 0 010 2.828l-8.486 8.485M7 17h.01"></path>
     </svg>
@@ -386,7 +386,7 @@ window.location.href = "file:///C:/Users/Vini/Documents/Freelancer/Raspou%20Levo
   </a>
   
   <!-- Botão Números da Sorte -->
-  <a ng-href="/numeros-da-sorte" class="flex flex-col items-center text-gray-400 hover:text-primary-500 transition" scroll-to-top="" href="/numeros-da-sorte">
+  <a ng-href="/numeros-da-sorte.html" class="flex flex-col items-center text-gray-400 hover:text-primary-500 transition" scroll-to-top="" href="/numeros-da-sorte.html">
     <i class="fa-solid fa-hashtag" style="font-size: 24px;"></i>
     <span class="text-xs mt-1">Números</span>
   </a>
@@ -405,7 +405,7 @@ window.location.href = "file:///C:/Users/Vini/Documents/Freelancer/Raspou%20Levo
   <!-- ngIf: isAuthenticated() -->
   
   <!-- Botão Registro (se não autenticado) -->
-  <!-- ngIf: !isAuthenticated() --><a ng-if="!isAuthenticated()" ng-href="/register" class="flex flex-col items-center text-gray-400 hover:text-primary-500 transition ng-scope" scroll-to-top="" href="/register">
+  <!-- ngIf: !isAuthenticated() --><a ng-if="!isAuthenticated()" ng-href="/register" class="flex flex-col items-center text-gray-400 hover:text-primary-500 transition ng-scope" scroll-to-top="" href="/register.html">
     <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
       <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M18 9v3m0 0v3m0-3h3m-3 0h-3m-2-5a4 4 0 11-8 0 4 4 0 018 0zM3 20a6 6 0 0112 0v1H3v-1z"></path>
     </svg>
