--- a/public/index.html
+++ b/public/index.html
@@ -309,11 +309,6 @@ header nav .site-logo img {
         © 2025 Raspou, Levou. Todos os direitos reservados.
       </div>
       <div class="mt-4 md:mt-0">
-        <ul class="flex space-x-6">
-          <li><a href="/termos-de-uso" class="text-gray-400 hover:text-white text-sm transition">Termos de Uso</a></li>
-          <li><a href="/politica-de-privacidade" class="text-gray-400 hover:text-white text-sm transition">Política de Privacidade</a></li>
-          <li><a href="/jogo-responsavel" class="text-gray-400 hover:text-white text-sm transition">Jogo Responsável</a></li>
-        </ul>
       </div>
     </div>
   </div>
@@ -335,7 +330,7 @@ header nav .site-logo img {
   </a>
   
   <!-- Botão Números da Sorte -->
-  <a ng-href="/numeros-da-sorte" class="flex flex-col items-center text-gray-400 hover:text-primary-500 transition" scroll-to-top="" href="/numeros-da-sorte">
+  <a ng-href="/numeros-da-sorte.html" class="flex flex-col items-center text-gray-400 hover:text-primary-500 transition" scroll-to-top="" href="/numeros-da-sorte.html">
     <i class="fa-solid fa-hashtag" style="font-size: 24px;"></i>
     <span class="text-xs mt-1">Números</span>
   </a>
@@ -343,7 +338,7 @@ header nav .site-logo img {
   <!-- Botão Carteira para usuários autenticados -->
   <!-- ngIf: isAuthenticated() -->
   
-  <!-- ngIf: !isAuthenticated() --><a ng-if="!isAuthenticated()" ng-href="/auth/login.html" class="flex flex-col items-center text-gray-400 hover:text-primary-500 transition ng-scope" scroll-to-top="" href="/auth/login">
+  <!-- ngIf: !isAuthenticated() --><a ng-if="!isAuthenticated()" ng-href="/auth/login.html" class="flex flex-col items-center text-gray-400 hover:text-primary-500 transition ng-scope" scroll-to-top="" href="/auth/login.html">
     <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
       <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M11 16l-4-4m0 0l4-4m-4 4h14m-5 4v1a3 3 0 01-3 3H6a3 3 0 01-3-3V7a3 3 0 013-3h7a3 3 0 013 3v1"></path>
     </svg>
