--- a/public/numeros-da-sorte.html
+++ b/public/numeros-da-sorte.html
@@ -115,7 +115,7 @@ header nav .site-logo img {
     <div class="hidden md:flex items-center md:space-x-2 xl:space-x-4">
       <!-- Se não estiver autenticado -->
       <!-- ngIf: !isAuthenticated() --><div ng-if="!isAuthenticated()" class="flex items-center ng-scope">
-        <a href="/auth/login.html" class="py-2 px-3 text-gray-300 hover:text-white transition" scroll-to-top="">Entrar</a>
+        <a href="/auth.html" class="py-2 px-3 text-gray-300 hover:text-white transition" scroll-to-top="">Entrar</a>
         <a href="/register.html" class="ml-3 py-2 px-4 bg-primary-600 hover:bg-primary-700 text-white rounded-md transition" scroll-to-top="">Registrar</a>
       </div><!-- end ngIf: !isAuthenticated() -->
       
@@ -181,23 +181,11 @@ header nav .site-logo img {
             </svg>
             <span class="text-xs mt-1">Raspadinhas</span>
         </a>
-        <a href="/numeros-da-sorte" class="flex flex-col items-center py-1 px-2 text-amber-500">
+        <a href="/numeros-da-sorte.html" class="flex flex-col items-center py-1 px-2 text-amber-500">
             <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8v4l3 3m6-3a9 9 0 11-18 0 9 9 0 0118 0z"></path>
             </svg>
             <span class="text-xs mt-1">Números da Sorte</span>
-        </a>
-        <a href="/carteira" class="flex flex-col items-center py-1 px-2 text-gray-400 hover:text-white">
-            <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 10h18M7 15h1m4 0h1m-7 4h12a3 3 0 003-3V8a3 3 0 00-3-3H6a3 3 0 00-3 3v8a3 3 0 003 3z"></path>
-            </svg>
-            <span class="text-xs mt-1">Carteira</span>
-        </a>
-        <a href="/perfil" class="flex flex-col items-center py-1 px-2 text-gray-400 hover:text-white">
-            <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M16 7a4 4 0 11-8 0 4 4 0 018 0zM12 14a7 7 0 00-7 7h14a7 7 0 00-7-7z"></path>
-            </svg>
-            <span class="text-xs mt-1">Perfil</span>
         </a>
     </div>
 </main> </div></main><!-- ngIf: !$route.current.isAuthRoute --><!-- ngInclude: 'views/components/common/app-footer.html' --><footer ng-if="!$route.current.isAuthRoute" ng-include="'views/components/common/app-footer.html'" class="ng-scope"><footer class="bg-gray-800 border-t border-gray-700 px-4 py-6 ng-scope">
@@ -230,7 +218,7 @@ header nav .site-logo img {
         <ul class="space-y-2">
           <li><a href="/" class="text-gray-400 hover:text-white transition">Início</a></li>
           <li><a href="/raspadinha.html" class="text-gray-400 hover:text-white transition">Raspadinhas</a></li>
-          <li><a href="/numeros-da-sorte" class="text-gray-400 hover:text-white transition">Números da Sorte</a></li>
+          <li><a href="/numeros-da-sorte.html" class="text-gray-400 hover:text-white transition">Números da Sorte</a></li>
           <!-- <li><a href="/perguntas-frequentes" class="text-gray-400 hover:text-white transition">Perguntas Frequentes</a></li> -->
         </ul>
       </div>
@@ -267,11 +255,6 @@ header nav .site-logo img {
         © 2025 Raspou, Levou. Todos os direitos reservados.
       </div>
       <div class="mt-4 md:mt-0">
-        <ul class="flex space-x-6">
-          <li><a href="/termos-de-uso" class="text-gray-400 hover:text-white text-sm transition">Termos de Uso</a></li>
-          <li><a href="/politica-de-privacidade" class="text-gray-400 hover:text-white text-sm transition">Política de Privacidade</a></li>
-          <li><a href="/jogo-responsavel" class="text-gray-400 hover:text-white text-sm transition">Jogo Responsável</a></li>
-        </ul>
       </div>
     </div>
   </div>
@@ -301,7 +284,7 @@ header nav .site-logo img {
   <!-- Botão Carteira para usuários autenticados -->
   <!-- ngIf: isAuthenticated() -->
   
-  <!-- ngIf: !isAuthenticated() --><a ng-if="!isAuthenticated()" ng-href="/auth/login.html" class="flex flex-col items-center text-gray-400 hover:text-primary-500 transition ng-scope" scroll-to-top="" href="/auth/login">
+  <!-- ngIf: !isAuthenticated() --><a ng-if="!isAuthenticated()" ng-href="/auth/login.html" class="flex flex-col items-center text-gray-400 hover:text-primary-500 transition ng-scope" scroll-to-top="" href="/auth/login.html">
     <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
       <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M11 16l-4-4m0 0l4-4m-4 4h14m-5 4v1a3 3 0 01-3 3H6a3 3 0 01-3-3V7a3 3 0 013-3h7a3 3 0 013 3v1"></path>
     </svg>
