--- a/public/raspadinha.html
+++ b/public/raspadinha.html
@@ -268,29 +268,11 @@ window.location.href = "file:///C:/Users/Vini/Documents/Freelancer/Raspou%20Levo
             </svg>
             <span class="text-xs mt-1">Início</span>
         </a>
-        <a href="/raspadinha" class="flex flex-col items-center py-1 px-2 text-yellow-500">
+        <a href="/raspadinha.html" class="flex flex-col items-center py-1 px-2 text-yellow-500">
             <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 12l2 2 4-4m5.618-4.016A11.955 11.955 0 0112 2.944a11.955 11.955 0 01-8.618 3.04A12.02 12.02 0 003 9c0 5.591 3.824 10.29 9 11.622 5.176-1.332 9-6.03 9-11.622 0-1.042-.133-2.052-.382-3.016z"></path>
             </svg>
             <span class="text-xs mt-1">Raspadinhas</span>
-        </a>
-        <a href="/premios" class="flex flex-col items-center py-1 px-2 text-gray-400 hover:text-white">
-            <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8v13m0-13V6a2 2 0 112 2h-2zm0 0V5.5A2.5 2.5 0 109.5 8H12zm-7 4h14M5 12a2 2 0 110-4h14a2 2 0 110 4M5 12v7a2 2 0 002 2h10a2 2 0 002-2v-7"></path>
-            </svg>
-            <span class="text-xs mt-1">Prêmios</span>
-        </a>
-        <a href="/carteira" class="flex flex-col items-center py-1 px-2 text-gray-400 hover:text-white">
-            <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 10h18M7 15h1m4 0h1m-7 4h12a3 3 0 003-3V8a3 3 0 00-3-3H6a3 3 0 00-3 3v8a3 3 0 003 3z"></path>
-            </svg>
-            <span class="text-xs mt-1">Carteira</span>
-        </a>
-        <a href="/perfil" class="flex flex-col items-center py-1 px-2 text-gray-400 hover:text-white">
-            <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M16 7a4 4 0 11-8 0 4 4 0 018 0zM12 14a7 7 0 00-7 7h14a7 7 0 00-7-7z"></path>
-            </svg>
-            <span class="text-xs mt-1">Perfil</span>
         </a>
     </div>
 </main> </div></main><!-- ngIf: !$route.current.isAuthRoute --><!-- ngInclude: 'views/components/common/app-footer.html' --><footer ng-if="!$route.current.isAuthRoute" ng-include="'views/components/common/app-footer.html'" class="ng-scope"><footer class="bg-gray-800 border-t border-gray-700 px-4 py-6 ng-scope">
@@ -306,7 +288,7 @@ window.location.href = "file:///C:/Users/Vini/Documents/Freelancer/Raspou%20Levo
   <!-- ngIf: !siteConfig.logo -->
 </div></div>
         <p class="text-gray-400 text-sm mb-4 ng-binding">
-          A Raspa Ganha é a maior e melhor plataforma de raspadinhas do Brasil
+          A Raspou, Levou é a maior e melhor plataforma de raspadinhas do Brasil
         </p>
         <div class="mt-4 flex space-x-3">
           <!-- Links de redes sociais -->
@@ -357,7 +339,7 @@ window.location.href = "file:///C:/Users/Vini/Documents/Freelancer/Raspou%20Levo
     
     <div class="border-t border-gray-700 mt-8 pt-6 flex flex-col md:flex-row justify-between items-center">
       <div class="text-gray-400 text-sm ng-binding">
-        © 2025 Raspa Ganha. Todos os direitos reservados.
+        © 2025 Raspou, Levou Todos os direitos reservados.
       </div>
       <div class="mt-4 md:mt-0">
         <ul class="flex space-x-6">
@@ -378,7 +360,7 @@ window.location.href = "file:///C:/Users/Vini/Documents/Freelancer/Raspou%20Levo
   </a>
   
   <!-- Botão Raspadinhas -->
-  <a ng-href="/raspadinha.html" class="flex flex-col items-center text-gray-400 hover:text-primary-500 transition" scroll-to-top="" href="/raspadinha">
+  <a ng-href="/raspadinha.html" class="flex flex-col items-center text-gray-400 hover:text-primary-500 transition" scroll-to-top="" href="/raspadinha.html">
     <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
       <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M7 21a4 4 0 01-4-4V5a2 2 0 012-2h4a2 2 0 012 2v12a4 4 0 01-4 4zm0 0h12a2 2 0 002-2v-4a2 2 0 00-2-2h-2.343M11 7.343l1.657-1.657a2 2 0 012.828 0l2.829 2.829a2 2 0 010 2.828l-8.486 8.485M7 17h.01"></path>
     </svg>
