--- a/public/numeros-da-sorte.html
+++ b/public/numeros-da-sorte.html
@@ -104,7 +104,7 @@ header nav .site-logo img {
     <!-- Menu de navegação (visível apenas em telas médias e grandes) -->
     <div class="hidden md:flex items-center md:space-x-2 xl:space-x-4 navbar-menu">
       <a href="/index.html" class="py-2 px-2 xl:px-3 text-gray-300 hover:text-white rounded-md hover:bg-gray-700 transition hidden xl:block" scroll-to-top="">Início</a>
-      <a href="/raspadinha.html" class="py-2 px-2 xl:px-3 text-gray-300 hover:text-white rounded-md hover:bg-gray-700 transition" scroll-to-top="">Raspadinhas</a>
+      <a href=".html" class="py-2 px-2 xl:px-3 text-gray-300 hover:text-white rounded-md hover:bg-gray-700 transition" scroll-to-top="">Raspadinhas</a>
       <a href="/numeros-da-sorte.html" class="py-2 px-2 xl:px-3 text-gray-300 hover:text-white rounded-md hover:bg-gray-700 transition" scroll-to-top="">Números da Sorte</a>
       
       <!-- Se tiver URL para contato, mostra o link -->
@@ -268,7 +268,7 @@ header nav .site-logo img {
   </a>
   
   <!-- Botão Raspadinhas -->
-  <a ng-href="/raspadinha" class="flex flex-col items-center text-gray-400 hover:text-primary-500 transition" scroll-to-top="" href="/raspadinha">
+  <a ng-href="/raspadinha.html" class="flex flex-col items-center text-gray-400 hover:text-primary-500 transition" scroll-to-top="" href="/raspadinha">
     <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
       <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M7 21a4 4 0 01-4-4V5a2 2 0 012-2h4a2 2 0 012 2v12a4 4 0 01-4 4zm0 0h12a2 2 0 002-2v-4a2 2 0 00-2-2h-2.343M11 7.343l1.657-1.657a2 2 0 012.828 0l2.829 2.829a2 2 0 010 2.828l-8.486 8.485M7 17h.01"></path>
     </svg>
@@ -276,7 +276,7 @@ header nav .site-logo img {
   </a>
   
   <!-- Botão Números da Sorte -->
-  <a ng-href="/numeros-da-sorte" class="flex flex-col items-center text-gray-400 hover:text-primary-500 transition" scroll-to-top="" href="/numeros-da-sorte">
+  <a ng-href="/numeros-da-sorte.html" class="flex flex-col items-center text-gray-400 hover:text-primary-500 transition" scroll-to-top="" href="/numeros-da-sorte">
     <i class="fa-solid fa-hashtag" style="font-size: 24px;"></i>
     <span class="text-xs mt-1">Números</span>
   </a>
