--- a/public/auth/login.html
+++ b/public/auth/login.html
@@ -96,7 +96,7 @@ header nav .site-logo img {
 </div></a>
     
     <!-- Botão de depósito visível apenas em mobile -->
-    <a href="/carteira/deposito" class="btn-mobile-header md:hidden py-2 px-4 bg-gradient-to-r from-green-600 to-green-700 text-white text-sm rounded-lg shadow-md hover:from-green-700 hover:to-green-800 transition-all duration-300 flex items-center font-medium mr-3" scroll-to-top="">
+    <a href="/carteira/deposit.html" class="btn-mobile-header md:hidden py-2 px-4 bg-gradient-to-r from-green-600 to-green-700 text-white text-sm rounded-lg shadow-md hover:from-green-700 hover:to-green-800 transition-all duration-300 flex items-center font-medium mr-3" scroll-to-top="">
       <i class="fas fa-plus-circle mr-1"></i>
       <span>Depositar</span>
     </a>
@@ -104,8 +104,8 @@ header nav .site-logo img {
     <!-- Menu de navegação (visível apenas em telas médias e grandes) -->
     <div class="hidden md:flex items-center md:space-x-2 xl:space-x-4 navbar-menu">
       <a href="/" class="py-2 px-2 xl:px-3 text-gray-300 hover:text-white rounded-md hover:bg-gray-700 transition hidden xl:block" scroll-to-top="">Início</a>
-      <a href="/raspadinha" class="py-2 px-2 xl:px-3 text-gray-300 hover:text-white rounded-md hover:bg-gray-700 transition" scroll-to-top="">Raspadinhas</a>
-      <a href="/numeros-da-sorte" class="py-2 px-2 xl:px-3 text-gray-300 hover:text-white rounded-md hover:bg-gray-700 transition" scroll-to-top="">Números da Sorte</a>
+      <a href="/raspadinha.html" class="py-2 px-2 xl:px-3 text-gray-300 hover:text-white rounded-md hover:bg-gray-700 transition" scroll-to-top="">Raspadinhas</a>
+      <a href="/numeros-da-sorte.html" class="py-2 px-2 xl:px-3 text-gray-300 hover:text-white rounded-md hover:bg-gray-700 transition" scroll-to-top="">Números da Sorte</a>
       
       <!-- Se tiver URL para contato, mostra o link -->
       <!-- ngIf: siteConfig.contact_page_url -->
