--- a/public/auth/login.html
+++ b/public/auth/login.html
@@ -315,7 +315,7 @@ header nav .site-logo img {
   <!-- Botão Carteira para usuários autenticados -->
   <!-- ngIf: isAuthenticated() -->
   
-  <!-- ngIf: !isAuthenticated() --><a ng-if="!isAuthenticated()" ng-href="/auth/login" class="flex flex-col items-center text-gray-400 hover:text-primary-500 transition ng-scope" scroll-to-top="" href="/auth/login">
+  <!-- ngIf: !isAuthenticated() --><a ng-if="!isAuthenticated()" ng-href="/auth/login.html" class="flex flex-col items-center text-gray-400 hover:text-primary-500 transition ng-scope" scroll-to-top="" href="/auth/login.html">
     <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
       <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M11 16l-4-4m0 0l4-4m-4 4h14m-5 4v1a3 3 0 01-3 3H6a3 3 0 01-3-3V7a3 3 0 013-3h7a3 3 0 013 3v1"></path>
     </svg>
@@ -326,7 +326,7 @@ header nav .site-logo img {
   <!-- ngIf: isAuthenticated() -->
   
   <!-- Botão Registro (se não autenticado) -->
-  <!-- ngIf: !isAuthenticated() --><a ng-if="!isAuthenticated()" ng-href="/register" class="flex flex-col items-center text-gray-400 hover:text-primary-500 transition ng-scope" scroll-to-top="" href="/register">
+  <!-- ngIf: !isAuthenticated() --><a ng-if="!isAuthenticated()" ng-href="/register.html" class="flex flex-col items-center text-gray-400 hover:text-primary-500 transition ng-scope" scroll-to-top="" href="/register.html">
     <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
       <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M18 9v3m0 0v3m0-3h3m-3 0h-3m-2-5a4 4 0 11-8 0 4 4 0 018 0zM3 20a6 6 0 0112 0v1H3v-1z"></path>
     </svg>
