--- a/public/auth/login.html
+++ b/public/auth/login.html
@@ -243,8 +243,8 @@ header nav .site-logo img {
         <h3 class="text-white font-medium mb-4">Links Rápidos</h3>
         <ul class="space-y-2">
           <li><a href="/" class="text-gray-400 hover:text-white transition">Início</a></li>
-          <li><a href="/raspadinha" class="text-gray-400 hover:text-white transition">Raspadinhas</a></li>
-          <li><a href="/numeros-da-sorte" class="text-gray-400 hover:text-white transition">Números da Sorte</a></li>
+          <li><a href="/raspadinha.html" class="text-gray-400 hover:text-white transition">Raspadinhas</a></li>
+          <li><a href="/numeros-da-sorte.html" class="text-gray-400 hover:text-white transition">Números da Sorte</a></li>
           <!-- <li><a href="/perguntas-frequentes" class="text-gray-400 hover:text-white transition">Perguntas Frequentes</a></li> -->
         </ul>
       </div>
