--- a/public/raspadinha.html
+++ b/public/raspadinha.html
@@ -96,7 +96,7 @@ header nav .site-logo img {
 </div></a>
     
     <!-- Botão de depósito visível apenas em mobile -->
-    <a href="/carteira/deposito" class="btn-mobile-header md:hidden py-2 px-4 bg-gradient-to-r from-green-600 to-green-700 text-white text-sm rounded-lg shadow-md hover:from-green-700 hover:to-green-800 transition-all duration-300 flex items-center font-medium mr-3" scroll-to-top="">
+    <a href="/deposito" class="btn-mobile-header md:hidden py-2 px-4 bg-gradient-to-r from-green-600 to-green-700 text-white text-sm rounded-lg shadow-md hover:from-green-700 hover:to-green-800 transition-all duration-300 flex items-center font-medium mr-3" scroll-to-top="">
       <i class="fas fa-plus-circle mr-1"></i>
       <span>Depositar</span>
     </a>
