--- a/public/register.html
+++ b/public/register.html
@@ -296,7 +296,7 @@ header nav .site-logo img {
     
     <div class="border-t border-gray-700 mt-8 pt-6 flex flex-col md:flex-row justify-between items-center">
       <div class="text-gray-400 text-sm ng-binding">
-        © 2025 Raspa Ganha. Todos os direitos reservados.
+        © 2025 Raspou, Levou. Todos os direitos reservados.
       </div>
       <div class="mt-4 md:mt-0">
         <ul class="flex space-x-6">
