--- a/public/auth/login.html
+++ b/public/auth/login.html
@@ -307,7 +307,7 @@ header nav .site-logo img {
   </a>
   
   <!-- Botão Números da Sorte -->
-  <a ng-href="/numeros-da-sorte.html" class="flex flex-col items-center text-gray-400 hover:text-primary-500 transition" scroll-to-top="" href="/numeros-da-sorte">
+  <a ng-href="/numeros-da-sorte.html" class="flex flex-col items-center text-gray-400 hover:text-primary-500 transition" scroll-to-top="" href="/numeros-da-sorte.html">
     <i class="fa-solid fa-hashtag" style="font-size: 24px;"></i>
     <span class="text-xs mt-1">Números</span>
   </a>
