--- a/public/numeros-da-sorte.html
+++ b/public/numeros-da-sorte.html
@@ -104,7 +104,7 @@ header nav .site-logo img {
     <!-- Menu de navegação (visível apenas em telas médias e grandes) -->
     <div class="hidden md:flex items-center md:space-x-2 xl:space-x-4 navbar-menu">
       <a href="/index.html" class="py-2 px-2 xl:px-3 text-gray-300 hover:text-white rounded-md hover:bg-gray-700 transition hidden xl:block" scroll-to-top="">Início</a>
-      <a href=".html" class="py-2 px-2 xl:px-3 text-gray-300 hover:text-white rounded-md hover:bg-gray-700 transition" scroll-to-top="">Raspadinhas</a>
+      <a href="raspadinha.html" class="py-2 px-2 xl:px-3 text-gray-300 hover:text-white rounded-md hover:bg-gray-700 transition" scroll-to-top="">Raspadinhas</a>
       <a href="/numeros-da-sorte.html" class="py-2 px-2 xl:px-3 text-gray-300 hover:text-white rounded-md hover:bg-gray-700 transition" scroll-to-top="">Números da Sorte</a>
       
       <!-- Se tiver URL para contato, mostra o link -->
