--- a/public/deposit.html
+++ b/public/deposit.html
@@ -65,7 +65,7 @@
   <nav class="bg-gray-900/90 border-b border-gray-700 px-4 py-3 shadow-md">
     <div class="container mx-auto flex justify-between items-center">
       <a href="/" class="flex items-center">
-        <img src="https://i.postimg.cc/ZR1n4pqz/logo.png" alt="Raspa Ganha" class="h-8 mr-2">
+        <img src="https://i.postimg.cc/ZR1n4pqz/logo.png" alt="Raspou, Levou" class="h-8 mr-2">
       </a>
       <div class="hidden md:flex items-center md:space-x-2 xl:space-x-4">
         <a href="/" class="ml-3 py-2 px-4 bg-gray-700 hover:bg-gray-600 text-white rounded-md transition" scroll-to-top="">Início</a>
@@ -132,7 +132,7 @@
 
 <footer class="bg-gray-800 border-t border-gray-700 px-4 py-6">
   <div class="container mx-auto text-center text-gray-400 text-sm">
-    © 2025 Raspa Ganha. Todos os direitos reservados.
+    © 2025 Raspou, Levou. Todos os direitos reservados.
   </div>
 </footer>
 
