--- a/public/index.html
+++ b/public/index.html
@@ -392,7 +392,7 @@ if (nomeUsuario) {
   `;
 } else {
   usuarioLogadoHeader.innerHTML = `
-    <a href=".html" class="ml-3 py-2 px-4 bg-primary-600 hover:bg-primary-700 text-white rounded-md transition" scroll-to-top="">Registrar</a>
+    <a href="/register.html" class="ml-3 py-2 px-4 bg-primary-600 hover:bg-primary-700 text-white rounded-md transition" scroll-to-top="">Registrar</a>
     <a href="/auth/login.html" class="ml-3 py-2 px-4 bg-primary-600 hover:bg-primary-700 text-white rounded-md transition" scroll-to-top="">Entrar</a>
   `;
 }
