--- a/public/auth/login.html
+++ b/public/auth/login.html
@@ -253,7 +253,7 @@ header nav .site-logo img {
     
     <div class="border-t border-gray-700 mt-8 pt-6 flex flex-col md:flex-row justify-between items-center">
       <div class="text-gray-400 text-sm ng-binding">
-        © 2025 Raspa Ganha. Todos os direitos reservados.
+        © 2025 Raspou, Levou. Todos os direitos reservados.
       </div>
     </div>
   </div>
