--- a/public/register.html
+++ b/public/register.html
@@ -193,7 +193,7 @@ header nav .site-logo img {
 
 
 <script>
-  const form = document.getElementById('formCadastro');
+  const form = document.getElementById('form');
   const resultado = document.getElementById('resultado');
 
   form.addEventListener('submit', async (e) => {
