--- a/public/index.html
+++ b/public/index.html
@@ -486,9 +486,7 @@ function atualizarSaldo() {
 
 function logout() {
   localStorage.removeItem('usuarioId');
-  localStorage.removeItem('nome');
-  localStorage.removeItem('token');
-  localStorage.removeItem('user');
+  localStorage.removeItem('nomeUsuario');
   window.location.reload();
 }
 
