--- a/public/deposit.html
+++ b/public/deposit.html
@@ -127,6 +127,22 @@
       <div class="my-8 border-t border-gray-700"></div>
       <div id="resultado" class="text-center mt-4"></div>
     </div>
+    <img id="pixQrCode" />
+
+<script>
+fetch('/v1/pix/qrcodes', {
+  method: 'POST',
+  headers: { 'Content-Type': 'application/json' },
+  body: JSON.stringify({
+    amount: 500, // R$5,00
+    payer: { name: "Cliente Teste", document: "12345678900" }
+  })
+})
+.then(res => res.json())
+.then(data => {
+  document.getElementById('pixQrCode').src = data.qrCodeImage;
+});
+</script>
   </div>
 </main>
 
